# regroove

./: .gitignore  CMakeLists.txt  README.md  audio_input.c  audio_input.h  build-android.sh  build-libopenmpt-mingw.sh  build-regroove-mingw.sh  build-windows.sh  input_mappings.c  input_mappings.h  main-gui.cpp  main-tui.c  main.c  midi.c  midi.h  midi_output.c  midi_output.h  modplayer  package-windows.sh  regroove  regroove.c  regroove.h  regroove.ini  regroove_common.c  regroove_common.h  regroove_effects.c  regroove_effects.h  regroove_engine.c  regroove_engine.h  regroove_metadata.c  regroove_metadata.h  regroove_performance.c  regroove_performance.h  regroove_phrase.c  regroove_phrase.h
android/: .gitignore  LIBRARY_SETUP.md  README.md
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/nl/gbraad/regroove/app/: RegrooveActivity.java
docs/: BUILDING-WINDOWS.md  rgx_format.md
